# vn-news-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml
config/: cities.yaml  disaster.yaml  feeds.yaml  schedule.yaml  scoring.yaml
src/vn_news_bot/: config.py  main.py
src/vn_news_bot/adapters/: llm.py  newsapi.py  openweather.py  rss.py  telegram.py
src/vn_news_bot/domain/: models.py
src/vn_news_bot/handlers/: commands.py
src/vn_news_bot/services/: disaster.py  news.py  scheduler.py  scoring.py  weather.py
src/vn_news_bot/utils/: text.py
tests/: conftest.py
tests/unit/: test_config_llm.py  test_disaster.py  test_llm.py  test_models.py  test_news.py  test_scoring.py  test_telegram_format.py  test_weather.py
